cleaning part 5, installed cypress to the frontend repo instead to root of part5

--- a/part5/bloglist-frontend/package.json
+++ b/part5/bloglist-frontend/package.json
@@ -16,7 +16,8 @@
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
 		"server": "json-server -p3001 --watch db.json",
-		"eslint": "eslint ."
+		"eslint": "eslint .",
+		"cypress:open": "cypress open"
 	},
 	"eslintConfig": {
 		"extends": [
@@ -40,6 +41,7 @@
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^14.4.3",
+		"cypress": "^12.1.0",
 		"eslint-plugin-jest": "^26.1.5",
 		"jest-watch-typeahead": "^0.6.5",
 		"json-server": "^0.17.0"
