--- a/part12/package.json
+++ b/part12/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
-	"connect": "flyctl postgres connect -a blog-database"
+    "connect": "flyctl postgres connect -a blog-database",
+	"proxy": "flyctl proxy 5432 -a blog-database "
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "sequelize-cli": "^6.6.0"
   },
   "dependencies": {
     "dotenv": "^16.0.3",
@@ -19,6 +21,7 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.0",
     "pg": "^8.8.0",
-    "sequelize": "^6.28.0"
+    "sequelize": "^6.28.0",
+    "umzug": "^3.2.1"
   }
 }
