--- a/part09/package.json
+++ b/part09/package.json
@@ -7,11 +7,15 @@
     "dev": "ts-node-dev index.ts",
     "start": "ts-node index.ts",
     "calculateBmi": "ts-node bmiCalculator.ts",
-    "calculateExercises": "ts-node exerciseCalculator"
+    "calculateExercises": "ts-node exerciseCalculator",
+    "lint": "eslint --ext .ts ."
   },
   "author": "Henri Maronen",
   "license": "ISC",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.17.0",
+    "@typescript-eslint/parser": "^6.17.0",
+    "eslint": "^8.56.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
