--- a/part09/patientor/package.json
+++ b/part09/patientor/package.json
@@ -20,6 +20,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@types/cors": "^2.8.17",
     "cors": "^2.8.5",
     "express": "^4.18.2"
   }
