--- a/part08/server/package.json
+++ b/part08/server/package.json
@@ -10,6 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.10.0",
-    "graphql": "^16.8.1"
+    "dotenv": "^16.4.1",
+    "graphql": "^16.8.1",
+    "mongoose": "^8.1.1",
+    "mongoose-unique-validator": "^4.0.0"
   }
 }
