--- a/part08/server/package.json
+++ b/part08/server/package.json
@@ -12,6 +12,7 @@
     "@apollo/server": "^4.10.0",
     "dotenv": "^16.4.1",
     "graphql": "^16.8.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "mongoose-unique-validator": "^4.0.0"
   }
